// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tesing the UpdateActivity component should call the updateActivity actions to update the activity with id = 1 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            for="id"
          >
            Id
          </label>
          <input
            data-testid="id-field-update-activity"
            id="id"
            name="id"
            pattern="[0-9]*"
            placeholder="Id"
            type="text"
            value="1"
          />
        </div>
        <div>
          <label
            for="name"
          >
            Name
          </label>
          <input
            data-testid="name-field-update-activity"
            id="name"
            name="name"
            placeholder="Name"
            type="text"
            value="updated"
          />
        </div>
        <div>
          <label
            for="description"
          >
            Description
          </label>
          <input
            data-testid="description-field-update-activity"
            id="description"
            name="description"
            placeholder="Description"
            type="text"
            value="updated"
          />
        </div>
        <div>
          <label
            for="status"
          >
            Status
          </label>
          <input
            data-testid="status-checkbox-update-activity"
            id="status"
            name="status"
            type="checkbox"
            value="true"
          />
        </div>
        <input
          data-testid="update-button-update-activity"
          type="submit"
          value="Update"
        />
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          for="id"
        >
          Id
        </label>
        <input
          data-testid="id-field-update-activity"
          id="id"
          name="id"
          pattern="[0-9]*"
          placeholder="Id"
          type="text"
          value="1"
        />
      </div>
      <div>
        <label
          for="name"
        >
          Name
        </label>
        <input
          data-testid="name-field-update-activity"
          id="name"
          name="name"
          placeholder="Name"
          type="text"
          value="updated"
        />
      </div>
      <div>
        <label
          for="description"
        >
          Description
        </label>
        <input
          data-testid="description-field-update-activity"
          id="description"
          name="description"
          placeholder="Description"
          type="text"
          value="updated"
        />
      </div>
      <div>
        <label
          for="status"
        >
          Status
        </label>
        <input
          data-testid="status-checkbox-update-activity"
          id="status"
          name="status"
          type="checkbox"
          value="true"
        />
      </div>
      <input
        data-testid="update-button-update-activity"
        type="submit"
        value="Update"
      />
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tesing the UpdateActivity component shouldn't call the updateActivity action for a not existing activity 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            for="id"
          >
            Id
          </label>
          <input
            data-testid="id-field-update-activity"
            id="id"
            name="id"
            pattern="[0-9]*"
            placeholder="Id"
            type="text"
            value="10"
          />
        </div>
        <div>
          <label
            for="name"
          >
            Name
          </label>
          <input
            data-testid="name-field-update-activity"
            id="name"
            name="name"
            placeholder="Name"
            type="text"
            value="updated"
          />
        </div>
        <div>
          <label
            for="description"
          >
            Description
          </label>
          <input
            data-testid="description-field-update-activity"
            id="description"
            name="description"
            placeholder="Description"
            type="text"
            value="updated"
          />
        </div>
        <div>
          <label
            for="status"
          >
            Status
          </label>
          <input
            data-testid="status-checkbox-update-activity"
            id="status"
            name="status"
            type="checkbox"
            value="true"
          />
        </div>
        <input
          data-testid="update-button-update-activity"
          type="submit"
          value="Update"
        />
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          for="id"
        >
          Id
        </label>
        <input
          data-testid="id-field-update-activity"
          id="id"
          name="id"
          pattern="[0-9]*"
          placeholder="Id"
          type="text"
          value="10"
        />
      </div>
      <div>
        <label
          for="name"
        >
          Name
        </label>
        <input
          data-testid="name-field-update-activity"
          id="name"
          name="name"
          placeholder="Name"
          type="text"
          value="updated"
        />
      </div>
      <div>
        <label
          for="description"
        >
          Description
        </label>
        <input
          data-testid="description-field-update-activity"
          id="description"
          name="description"
          placeholder="Description"
          type="text"
          value="updated"
        />
      </div>
      <div>
        <label
          for="status"
        >
          Status
        </label>
        <input
          data-testid="status-checkbox-update-activity"
          id="status"
          name="status"
          type="checkbox"
          value="true"
        />
      </div>
      <input
        data-testid="update-button-update-activity"
        type="submit"
        value="Update"
      />
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
